# macos-opensh

./: .gitignore  AUTHORS  LICENSE-GNU  Makefile.am  README.md  configure.ac  remove-license.awk  replace-license.sh
.github/: CODEOWNERS
app/: Makefile.am  opensh.c  opensh.h  zcmdsh.c
lib/: Makefile.am  command.c  command.h  command_shell.c  command_shell.h  debug.c  debug.h  debug_cmd.c  debug_cmd.h  file.c  file.h  flag.h  includes.h  log.c  log.h  shell.c  shell.h  shell_fselect.c  shell_fselect.h  termio.c  termio.h  vector.c  vector.h
