## Process this file with automake to produce Makefile.in.

INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/lib

noinst_LIBRARIES = libzcmdsh.a

libzcmdsh_a_SOURCES = \
	log.c termio.c vector.c shell.c command.c \
	command_shell.c prefix.c file.c

noinst_HEADERS = \
	log.h termio.h vector.h shell.h command.h \
	command_shell.h prefix.h file.h

